style: fixed z-indexing and default bg color changed

--- a/src/App.scss
+++ b/src/App.scss
@@ -49,7 +49,7 @@ body {
   background-color: transparent;
   line-height: 1;
   font-weight: normal;
-  background-color: #454545;
+  background-color: black;
 }
 
 #experience {
@@ -195,7 +195,7 @@ body {
 }
 
 .navbar {
-  z-index: 4;
+  z-index: 3;
   position: fixed;
   mix-blend-mode: difference;
   display: flex;
@@ -243,7 +243,7 @@ body {
     font-size: 2.5rem;
     background-color: transparent;
     &-fixed {
-      z-index: 4;
+      z-index: 3;
       position: fixed;
       bottom: 0.5rem;
       &.navbar-button-left {
@@ -326,7 +326,7 @@ body {
 }
 
 .contacts {
-  z-index: 3;
+  z-index: 2;
   position: fixed;
   top: 0;
   right: 0;
@@ -444,7 +444,7 @@ body {
 }
 
 .music-controls {
-  z-index: 4;
+  z-index: 3;
   position: fixed;
   left: 50%;
   bottom: 0.5rem;
